...
    val context = LocalContext.current

    Box(
        modifier = Modifier
            .fillMaxSize()
            .background(verticalGradientBrush)
            .testTag("SignUpStep2")
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .verticalScroll(rememberScrollState())
                .padding(horizontal = 35.dp),
...
            Button(
                onClick = {
                    viewModel.submitRegistration(onFinish)
                },
                modifier = Modifier
                    .width(124.dp)
                    .testTag("FinishSignUp"),
                colors = ButtonDefaults.buttonColors(
                    containerColor = Color.White,
                    contentColor = Color(0xFF4C4B4B)
                ),
                enabled = selectedAvatarIndex != -1
            ) {
...
